turtleart.diskfourth.DiskFourth.scala.error
Compilation error:
DiskFourth:5: error: not found: value division
  for (div <- 1 to division) {
                   ^