turtleart.diskfourth.DiskFourth.scala.code
def disque(ouverture:Double,divisions:Double,longeur:Double) {
  
  var angle = ouverture/divisions
  
  for (div <- 1 to division) {
    
    avance(longeur)
    recule(longeur)
    droite(angle)
    
  }
  
}

override def run() {
  
  disque(90,90,100)
  
}